 * добавлена полная поддержка игры Nuclear Dawn;
 * добавлена поддержка очистки кэшей и временных файлов, создаваемых при установке и обновлении игр с новой системой контента;
 * добавлена поддержка Linux;
 * исправлена ошибка, из-за которой не работали кнопки справки контролов установки разрешения экрана;
 * 

Версия 8.0 Final r525 (16 февраля 2012):
 * добавлена полная поддержка любых NCF-игр (с поддержкой графического твикера);
 * добавлена полная поддержка следующих игр Valve: Left 4 Dead, Left 4 Dead 2, Portal 2, Alien Swarm, Dota 2 Beta, Counter-Strike Global Offensive;
 * все экспериментальные функции перемещены в основной код;
 * добавлена функция безопасной очистки кастомных звуков, загруженных с игровых серверов;
 * исправлена ошибка с неправильным автовыбором последнего логина Steam при запуске приложения;
 * исправлена ошибка с неправильным автовыбором последней игры при запуске приложения после установки новой из Steam;
 * сообщение, появляющееся при запуске программы от ограниченной учётной записи, теперь будет выводиться только один раз;
 * добавлена поддержка обновления базы игр без обновления самой программы;
 * исправлено несколько ошибок, проявляющихся при установке конфигов;
 * исправлены незначительные ошибки в модуле Редактор Hosts;
 * удалён ряд ненужных и малоиспользуемых функций;
 * добавлен счётчик количества запусков;
 * улучшена детализация отладочного журнала программы;
 * во все внешние модули добавлена поддержка NCF игр;
 * добавлена функция резервного копирования и восстановления video.txt NCF игр со страницы Резервные копии;
 * переписан текст некоторых сообщений в русской локализации;
 * произведены оптимизации ресурсоёмких функций.

Версия 7.0 Final r486 (04 января 2012):
 * исправлена критическая ошибка с отображением в списке логинов системных каталогов Steam;
 * исправлена критическая ошибка, при которой программа завершала свою работу;
 * унифицированы все FPS-конфиги;